--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="title_activity_import_db">CSV File import</string>
     <string name="import_db">Import CSV file in database</string>
     <string name="import_db_label">Put a CSV file in CineLog directory and click the below button.</string>
+    <string name="add_from_scratch_label">Add movie from scratch</string>
 
 
 </resources>
