--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,11 @@
     <string name="import_db_label">Put a CSV file in CineLog directory and click the below button.</string>
     <string name="add_from_scratch_label">Add movie from scratch</string>
     <string name="title_activity_settings">Settings</string>
-
+    <string name="default_tmdb_language_title">TmDb data language</string>
+    <string name="default_maximum_rating">Maximum rating available in reviews</string>
+    <string name="default_maximum_rating_summary">Enter the default maximal note you want to set to new movies</string>
+    <string name="default_maximum_rating_dialog">Type the maximum rating you want to set to new movies</string>
+    <string name="general_preferences">General preferences</string>
+    <string name="general_preferences_summary">Set the global preferences of this app.</string>
 
 </resources>
