--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -40,6 +40,7 @@
     <string name="default_maximum_rating_dialog">Choisir la note maximale possible pour les prochains avis</string>
     <string name="general_preferences">Préférences générales</string>
     <string name="general_preferences_summary">Gèrer les préférences générales de l\'application</string>
+    <string name="view_poster_review_layout_title">Avis</string>
 
 
 </resources>
