--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="default_maximum_rating_dialog">Type the maximum rating you want to set to new movies</string>
     <string name="general_preferences">General preferences</string>
     <string name="general_preferences_summary">Set the global preferences of this app.</string>
+    <string name="view_poster_review_layout_title">Review</string>
 
 </resources>
