--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -41,6 +41,9 @@
     <string name="general_preferences">Préférences générales</string>
     <string name="general_preferences_summary">Gèrer les préférences générales de l\'application</string>
     <string name="view_poster_review_layout_title">Avis</string>
+    <string name="view_kino_review_rating_label_value">Note</string>
+    <string name="view_kino_review_review_date_label_value">Date du visionnage</string>
+    <string name="view_kino_review_review_label_value">Commentaire</string>
 
 
 </resources>
