--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_activity_add_kino">Add a review</string>
     <string name="title_activity_view_kino">Review of the movie</string>
 
+    <string name="kino_title">Title</string>
+
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="yes">Yes</string>
@@ -32,7 +34,7 @@
     <string name="title_activity_import_db">CSV File import</string>
     <string name="import_db">Import CSV file in database</string>
     <string name="import_db_label">Put a CSV file in CineLog directory and click the below button.</string>
-    <string name="add_from_scratch_label">Add movie from scratch</string>
+    <string name="add_from_scratch_label">Can\'t find a movie ?</string>
     <string name="title_activity_settings">Settings</string>
     <string name="default_tmdb_language_title">TmDb data language</string>
     <string name="default_maximum_rating">Maximum rating available in reviews</string>
@@ -44,5 +46,6 @@
     <string name="view_kino_review_rating_label_value">Movie rating</string>
     <string name="view_kino_review_review_date_label_value">Review date</string>
     <string name="view_kino_review_review_label_value">Review</string>
+    <string name="title_activity_view_unregistered_kino">Movie informations</string>
 
 </resources>
