--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,10 +49,16 @@
     <string name="oldest_first">Oldest First</string>
     <string name="highest_first">Highest First</string>
     <string name="lowest_first">Lowest First</string>
+
     <string name="title_activity_export_db">Export data</string>
     <string name="export_db">Export data as CSV</string>
     <string name="export_db_label">Click the button to export your data as a CSV file. It will be saved as \'export.csv\' at storage root. You will be able to import this backup if you need it.</string>
     <string name="action_export">Export</string>
+    <string name="export_start_toast">Export starting…</string>
+    <string name="export_succeeded_toast">… export succeeded. See export.csv file at storage root.</string>
+    <string name="export_io_error_toast">An I/O error occurred during export. Verify your permissions.</string>
+    <string name="export_permission_error_toast">Can\'t export since external storage writing is not allowed for CineLog.</string>
+
     <string name="action_import">Import</string>
     <string name="title_activity_import_db">CSV File import</string>
     <string name="import_db">Import CSV file in database</string>
