--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="view_kino_review_review_label_value">Review</string>
     <string name="title_activity_view_unregistered_kino">Movie informations</string>
     <string name="review_date_hint">Enter the viewing date.</string>
+    <string name="review_change_reviewdate">Modify</string>
 
 </resources>
