--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -65,6 +65,9 @@
     <string name="import_db_label">Lege eine CSV Datei in den CineLog Ordner und drücke den importieren Button.</string>
     <string name="import_permission_error_toast">Es kann nicht importiert werden das lesen des externen Speichers ist für CineLog nicht erlaubt.</string>
     <string name="import_error_toast">Beim importieren der Daten ist ein Fehler aufgetreten.</string>
+    <string name="import_io_error_toast">_NOTTRANSLATED_An error occurred while trying to find import.csv file. Verify it is located at the root storage and that you have required permissions.</string>
+    <string name="import_parsing_error_toast">_NOTTRANSLATED_Error while parsing CSV file. Please verify it.</string>
+    <string name="import_parsing_line_error_toast">_NOTTRANSLATED_Can\'t save import movie with name %s.</string>
     <string name="import_starting_toast">Import gestartet...</string>
 
     <string name="add_from_scratch_label">Film wurde nicht gefunden?</string>
@@ -82,5 +85,7 @@
     <string name="title_activity_view_unregistered_kino">Film Informationen</string>
     <string name="review_date_hint">Trage ein wann du den Film gesehen hast.</string>
     <string name="review_change_reviewdate">_NOTTRANSLATED_Modify</string>
+    <string name="addkino_error_no_network">_NOTTRANSLATED_Can\'t reach network.</string>
+    <string name="addkino_error_no_review_entered">_NOTTRANSLATED_Please add a rating or a review.</string>
 
 </resources>
