--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -63,6 +63,9 @@
     <string name="import_db_label">Sélectionner un fichier CSV pour l\'importer dans l\'application</string>
     <string name="import_permission_error_toast">Impossible d\'importer sans autoriser la permission de stockage à CinéLog.</string>
     <string name="import_error_toast">Une erreur est survenue durant l\'import des données.</string>
+    <string name="import_io_error_toast">Impossible d\'ouvrir le fichier import.csv. Vérifiez qu\'il se trouve à la racine du stockage et que vous avez la permission requise.</string>
+    <string name="import_parsing_error_toast">Impossible de parser le fichier CSV. Vérifiez que votre fichier est correctement écrit.</string>
+    <string name="import_parsing_line_error_toast">Impossible d\'importer le film %s. Une date ou un chiffre n\'est pas au bon format.</string>
     <string name="import_starting_toast">Import démarré…</string>
 
     <string name="add_from_scratch_label">Film non trouvé ?</string>
@@ -80,5 +83,7 @@
     <string name="title_activity_view_unregistered_kino">Informations sur le film</string>
     <string name="review_date_hint">Entrez la date du visionnage.</string>
     <string name="review_change_reviewdate">Modifier</string>
+    <string name="addkino_error_no_network">Impossible de se connecter aux Internets :-(</string>
+    <string name="addkino_error_no_review_entered">Donnez une note ou entrez un commentaire pour pouvoir sauvegarder l\'avis.</string>
 
 </resources>
