--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,9 @@
     <string name="import_db_label">Put a CSV file at the storage root, name it import.csv, and click the button. You\'ll then see your imported movie.</string>
     <string name="import_permission_error_toast">Can\'t import since external storage reading is not allowed for CineLog.</string>
     <string name="import_error_toast">An error occurred during data import.</string>
+    <string name="import_io_error_toast">An error occurred while trying to find import.csv file. Verify it is located at the root storage and that you have required permissions.</string>
+    <string name="import_parsing_error_toast">Error while parsing CSV file. Please verify it.</string>
+    <string name="import_parsing_line_error_toast">Can\'t save import movie with name %s.</string>
     <string name="import_starting_toast">Import started…</string>
 
     <string name="add_from_scratch_label">Can\'t find a movie ?</string>
@@ -82,5 +85,7 @@
     <string name="title_activity_view_unregistered_kino">Movie informations</string>
     <string name="review_date_hint">Enter the viewing date.</string>
     <string name="review_change_reviewdate">Modify</string>
+    <string name="addkino_error_no_network">Can\'t reach network.</string>
+    <string name="addkino_error_no_review_entered">Please add a rating or a review.</string>
 
 </resources>
