--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,8 +39,8 @@
     <string name="review_hint">Entrer un avis ici.</string>
 
     <string name="order">Ordre</string>
-    <string name="year">Année</string>
-    <string name="date_added">Date d\'ajout</string>
+    <string name="year">Année de sortie</string>
+    <string name="date_added">Date de revue</string>
     <string name="rating">Note</string>
 
     <string name="newest_first">Le plus récent d\'abord</string>
