--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -67,6 +67,7 @@
     <string name="import_parsing_error_toast">Impossible de parser le fichier CSV. Vérifiez que votre fichier est correctement écrit.</string>
     <string name="import_parsing_line_error_toast">Impossible d\'importer le film %s. Une date ou un chiffre n\'est pas au bon format.</string>
     <string name="import_starting_toast">Import démarré…</string>
+    <string name="import_ending_toast">… import terminé !</string>
 
     <string name="add_from_scratch_label">Film non trouvé ?</string>
     <string name="title_activity_settings">Paramètres</string>
