--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
 
     <string name="order">Order</string>
     <string name="year">Release year</string>
-    <string name="date_added">Review date</string>
+    <string name="date_added">Viewing date</string>
     <string name="rating">Rating</string>
 
     <string name="newest_first">Newest First</string>
