--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -42,7 +42,7 @@
 
     <string name="order">Sortieren</string>
     <string name="year">_NOTTRANSLATED_Release year</string>
-    <string name="date_added">_NOTTRANSLATED_Review date</string>
+    <string name="date_added">_NOTTRANSLATED_Viewing date</string>
     <string name="rating">Bewertung</string>
 
     <string name="newest_first">Neuste zuerst</string>
