--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,6 @@
     <string name="review_change_reviewdate">Modify</string>
     <string name="addkino_error_no_network">Can\'t reach network.</string>
     <string name="addkino_error_no_review_entered">Please add a rating or a review.</string>
+    <string name="title_activity_add_serie">Add serie</string>
 
 </resources>
