--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -72,7 +72,6 @@
     <string name="import_ending_toast">… import erfolgreich !</string>
 
     <string name="add_from_scratch_label">Film wurde nicht gefunden?</string>
-    <string name="add_serie_from_scratch_label">Serie wurde nicht gefunden?</string>
     <string name="title_activity_settings">Einstellungen</string>
     <string name="default_tmdb_language_title">TmDb Datenbank Sprache</string>
     <string name="default_maximum_rating">Maximales Rating verfügbar in den Reviews</string>
@@ -89,5 +88,11 @@
     <string name="review_change_reviewdate">modifizieren</string>
     <string name="addkino_error_no_network">Keine Netzwerkverbindung.</string>
     <string name="addkino_error_no_review_entered">Bitte fügen sie eine Bewertung oder eine Rezension hinzu.</string>
+
+    <string name="title_activity_add_serie">Füge eine Rezension hinzu</string>
+    <string name="add_serie_from_scratch_label">Serie wurde nicht gefunden?</string>
+    <string name="serie_title_hint">Serie Titel hinzufügen.</string>
+    <string name="title_activity_view_unregistered_serie">Serie Informationen</string>
+    <string name="title_activity_view_serie">Rezension der Serie</string>
 
 </resources>
