--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,6 @@
     <string name="import_ending_toast">… import ended !</string>
 
     <string name="add_from_scratch_label">Can\'t find the movie ?</string>
-    <string name="add_serie_from_scratch_label">Can\'t find the serie ?</string>
     <string name="title_activity_settings">Settings</string>
     <string name="default_tmdb_language_title">TmDb data language</string>
     <string name="default_maximum_rating">Maximum rating available in reviews</string>
@@ -89,6 +88,11 @@
     <string name="review_change_reviewdate">Modify</string>
     <string name="addkino_error_no_network">Can\'t reach network.</string>
     <string name="addkino_error_no_review_entered">Please add a rating or a review.</string>
+
     <string name="title_activity_add_serie">Add serie</string>
+    <string name="add_serie_from_scratch_label">Can\'t find the serie ?</string>
+    <string name="serie_title_hint">Enter a serie title.</string>
+    <string name="title_activity_view_unregistered_serie">Serie informations</string>
+    <string name="title_activity_view_serie">Serie review</string>
 
 </resources>
