--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="import_ending_toast">… import ended !</string>
 
     <string name="add_from_scratch_label">Can\'t find the movie ?</string>
+
     <string name="title_activity_settings">Settings</string>
     <string name="default_tmdb_language_title">TmDb data language</string>
     <string name="default_maximum_rating">Maximum rating available in reviews</string>
@@ -82,6 +83,9 @@
     <string name="default_maximum_rating_dialog">Type the maximum rating you want to set to new movies</string>
     <string name="general_preferences">General preferences</string>
     <string name="general_preferences_summary">Set the global preferences of this app.</string>
+    <string name="theme">Dark theme</string>
+    <string name="change_theme">Theme changed. Restart the application to fully apply the theme.</string>
+
     <string name="view_poster_review_layout_title">Review</string>
     <string name="view_kino_review_rating_label_value">Movie rating</string>
     <string name="view_kino_review_review_date_label_value">Review date</string>
