--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,10 @@
     <string name="serie_title_hint">Enter a serie title.</string>
     <string name="title_activity_view_unregistered_serie">Serie informations</string>
     <string name="title_activity_view_serie">Serie review</string>
+    <string name="automatic_save">Automatic export to local storage</string>
+    <string name="automatic_save_summary">An export will be done at each application start (one per day, keeping the last 10 exports)</string>
+    <string name="automatic_save_toast">The automatic export has been generated !</string>
+    <string name="automatic_export_cant_get_next_export">Unable to get the next export file. Automatic export will not be done. Please verify allowed permissions.</string>
+    <string name="automatic_export_cant_export">Unable to generate automatic export. Please verify the allowed permissions.</string>
 
 </resources>
